--- a/Spark_Core/pom.xml
+++ b/Spark_Core/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>spark-core_2.12</artifactId>
             <version>3.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.69</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
